# cute-gemm-101

./: CMakeLists.txt  README.md
include/: cuda_gemm.hpp  profile_utils.cuh
src/: CMakeLists.txt  cutlass_cute_00_block_tiling_thread_tiling_without_shared_memory.cu  cutlass_cute_01_block_tiling_thread_tiling_with_swizzle_shared_memory.cu  cutlass_cute_02_block_tiling_thread_tiling_with_swizzle_shared_memory_pipeline.cu  cutlass_cute_03_block_tiling_thread_tiling_with_swizzle_shared_memory_pipeline_epilouge.cu  cutlass_cute_official_gemm_v01.cu  cutlass_cute_official_gemm_v02.cu  profile_cuda_gemm_fp16.cu  profile_cuda_gemm_fp32.cu
